Fixed syntax highlighting being too dark

--- a/assets/scss/theme/_base.scss
+++ b/assets/scss/theme/_base.scss
@@ -139,3 +139,8 @@ a {
   font-family: $font-family-display;
   letter-spacing: 1px;
 }
+
+pre,
+pre code {
+  color: #ffffff;
+}
